<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout_id"
    android:layout_width="match_parent"
    android:padding="20dp"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <ImageView
        android:contentDescription="First hidden Card on Table"
        android:id="@+id/iv_table_h1"
        android:layout_width="92dp"
        android:layout_height="125dp"
        android:layout_alignTop="@id/iv_table_0"
        android:layout_alignLeft="@id/iv_table_0"
        android:layout_marginTop="20dp"
        android:layout_marginStart="-20dp"
        android:padding="0dp"
        android:src="@drawable/red_card_back"/>

    <ImageView
        android:contentDescription="@string/card_table"
        android:id="@+id/iv_table_0"
        android:layout_width="92dp"
        android:layout_height="125dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="0dp"
        android:padding="0dp"
        android:src="@drawable/red_card_back"/>

    <ImageView
        android:id="@+id/iv_table"
        android:layout_width="3700dp"
        android:layout_height="6666dp"
        android:contentDescription="@string/table" />

    <ImageView
        android:id="@+id/iv_card_0"
        android:layout_width="92dp"
        android:layout_height="125dp"
        android:layout_alignParentBottom="true"
        android:padding="0dp"
        android:contentDescription="@string/card_first_first_player"
        android:src="@drawable/red_card_back" />

    <ImageView
        android:id="@+id/iv_card_1"
        android:layout_width="92dp"
        android:layout_height="125dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@id/iv_card_0"
        android:contentDescription="@string/card_second_first_player"
        android:padding="0dp"
        android:src="@drawable/red_card_back" />

    <ImageView
        android:id="@+id/iv_card_2"
        android:layout_width="92dp"
        android:layout_height="125dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@id/iv_card_1"
        android:contentDescription="@string/card_third_first_player"
        android:padding="0dp"
        android:src="@drawable/red_card_back" />

    <ImageView
        android:id="@+id/iv_card_3"
        android:layout_width="92dp"
        android:layout_height="125dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@id/iv_card_2"
        android:contentDescription="@string/card_fourth_first_player"
        android:padding="0dp"
        android:src="@drawable/red_card_back" />

    <ImageView
        android:id="@+id/iv_card_back_3"
        android:layout_width="92dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@id/iv_card_2"
        android:contentDescription="@string/card_fourth_second_player"
        android:src="@drawable/red_card_back" />

    <ImageView
        android:id="@+id/iv_card_back_2"
        android:layout_width="92dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@id/iv_card_1"
        android:contentDescription="@string/card_third_second_player"
        android:src="@drawable/red_card_back" />

    <ImageView
        android:id="@+id/iv_card_back_1"
        android:layout_width="92dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_toEndOf="@id/iv_card_0"
        android:contentDescription="@string/card_second_second_player"
        android:src="@drawable/red_card_back" />

    <ImageView
        android:contentDescription="@string/card_first_second_player"
        android:id="@+id/iv_card_back_0"
        android:layout_width="92dp"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:src="@drawable/red_card_back" />

    <ImageView
        android:id="@+id/iv_settings"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:layout_marginVertical="300dp"
        android:src="@drawable/settings" />

    <ImageView
        android:id="@+id/iv_help"
        android:layout_width="22dp"
        android:layout_height="22dp"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/iv_settings"
        android:layout_marginBottom="-40dp"
        android:src="@drawable/help" />

    <TextView
        android:id="@+id/pisti"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:text="PiSTi"
        android:textStyle="bold"
        android:textSize="50dp"
        android:textColor="@color/teal_700"
        android:background="@color/black"
        android:textAlignment="center"
        android:visibility="gone"
        />
</RelativeLayout>